# lithomaker

./: .gitignore  CMakeLists.txt  README.md  default.desktop
.github/workflows/: build-wasm.yml  build.yml
src/: main.cpp  version.h.in
src/core/: imageloader.cpp  imageloader.h  settings.cpp  settings.h
src/export/: exporter.h  objexporter.cpp  objexporter.h  stlexporter.cpp  stlexporter.h  threemfexporter.cpp  threemfexporter.h
src/mesh/: meshgenerator.cpp  meshgenerator.h
src/ui/: aboutbox.cpp  aboutbox.h  configdialog.cpp  configdialog.h  configpages.cpp  configpages.h  mainwindow.cpp  mainwindow.h  previewwidget.cpp  previewwidget.h
src/ui/widgets/: checkbox.cpp  checkbox.h  combobox.cpp  combobox.h  lineedit.cpp  lineedit.h  slider.cpp  slider.h
web/: index.html  style.css
